style: add lock class to prevent body overflow when necessary

--- a/styles/main.css
+++ b/styles/main.css
@@ -304,6 +304,10 @@ svg * {
   }
 }
 
+html.is-lock {
+  overflow: hidden;
+}
+
 body {
   font-size: clamp(0.875rem, 0.7944214876rem + 0.3305785124vw, 1.125rem);
   font-family: var(--font-family-base);
